# open-strix

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_0.1.44.md  SETUP.md  main.py  pyproject.toml
.github/workflows/: prerelease.yml  release.yml
docs/: events.md  hooks.md  overview.md  proposal-journal-terminality.md  skills.md
open_strix/: __init__.py  api.py  app.py  builtin_skills.py  cli.py  config.py  discord.py  hooks.py  mattermost.py  models.py  ops_dashboard.py  phone_book.py  prompts.py  readonly_backend.py  reflection.py  release.py  replay.py  scheduler.py  shell_jobs.py  tools.py  ui_plugins.py  web_ui.py
open_strix/builtin_skills/: __init__.py
optional-skills/bluesky-poller/: poller.py
scripts/: install_pre_commit_hook.sh  refresh-agents.sh
tests/: test_activity_patterns.py  test_agent_loop_live.py  test_api.py  test_batched_processing.py  test_builtin_skills.py  test_cli.py  test_config_folders.py  test_discord.py  test_discord_live.py  test_dissonance_review.py  test_drain.py  test_hooks.py  test_llm_usage_event.py  test_logging_backend.py  test_mattermost.py  test_memory_block_race.py  test_model_max_tokens.py  test_onboarding_flow.py  test_ops_dashboard.py  test_phone_book.py  test_prompt_context.py  test_reflection.py  test_release.py  test_replay.py  test_scheduler_model_field.py  test_scheduler_pollers.py  test_scheduler_watchers.py  test_shell_jobs.py  test_turn_timing.py  test_ui_plugins.py  test_ui_proxy.py  test_web_ui.py  test_write_guard.py  test_yaml_block_hardening.py
(+62 files in other folders)
